gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-box_patterns.rs
fn main() {
    let box x = Box::new('c'); // { dg-error ".E0658." "" { target *-*-* } }
    println!("x: {}", x);
}

